--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -36,11 +36,23 @@ label{
 		position: fixed;
 		z-index: 0;
 	//} ** END ATTRIBUTES
+	&.isMobile{
+		width: 100vw;
+	}
 	
 }
 
 #navigator:checked ~ label > div.navigator{
-	>.element{
+
+	//{ ** DESCRIPTION
+		/**
+			The navigator is open at this moment. The animation below
+			changes the open square into a closed 'X'
+		**/
+	//} ** END DESCRIPTION
+	
+	
+	>.element:not(.isMobile){
 		&.e1{
 
 			transform: rotate(0deg);
@@ -51,7 +63,7 @@ label{
 
 			@keyframes e1-close{
 				from{
-					top: 27px;
+					top: 0px;
 					transform: rotate(0deg);
 					-ms-transform: rotate(0deg);
 					-webkit-transform: rotate(0deg);
@@ -67,7 +79,7 @@ label{
 					-o-transform: rotate(45deg);
 				}
 			}
-			animation: e1-close .1s ease-out 0s forwards;
+			animation: e1-close .2s ease-out 0s forwards;
 		}
 		&.e2{
 
@@ -95,7 +107,7 @@ label{
 					-o-transform: rotate(135deg);
 				}
 			}
-			animation: e2-close .1s ease-out 0s forwards;
+			animation: e2-close .2s ease-out .05s forwards;
 		}
 		&.e3{
 
@@ -123,7 +135,7 @@ label{
 					-o-transform: rotate(135deg);
 				}
 			}
-			animation: e3-close .1s ease-out 0s forwards;
+			animation: e3-close .2s ease-out .1s forwards;
 		}
 		&.e4{
 
@@ -151,23 +163,145 @@ label{
 					-o-transform: rotate(45deg);
 				}
 			}
-			animation: e4-close .1s ease-out 0s forwards;
+			animation: e4-close .2s ease-out .15s forwards;
+		}
+	}
+
+	>.element.isMobile{
+		&.e1{
+
+			transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+
+			@keyframes e1-close-m{
+				from{
+					top: 10px;
+					transform: rotate(0deg);
+					-ms-transform: rotate(0deg);
+					-webkit-transform: rotate(0deg);
+					-moz-transform: rotate(0deg);
+					-o-transform: rotate(0deg);
+				}
+				to{
+					top: 29px;
+					transform: rotate(45deg);
+					-ms-transform: rotate(45deg);
+					-webkit-transform: rotate(45deg);
+					-moz-transform: rotate(45deg);
+					-o-transform: rotate(45deg);
+				}
+			}
+			animation: e1-close-m .2s ease-out 0s forwards;
+		}
+		&.e2{
+
+			transform: rotate(90deg);
+			-ms-transform: rotate(90deg);
+			-webkit-transform: rotate(90deg);
+			-moz-transform: rotate(90deg);
+			-o-transform: rotate(90deg);
+
+			@keyframes e2-close-m{
+				from{
+					left: -10px;
+					transform: rotate(90deg);
+					-ms-transform: rotate(90deg);
+					-webkit-transform: rotate(90deg);
+					-moz-transform: rotate(90deg);
+					-o-transform: rotate(90deg);
+				}
+				to{
+					left: 10px;
+					transform: rotate(135deg);
+					-ms-transform: rotate(135deg);
+					-webkit-transform: rotate(135deg);
+					-moz-transform: rotate(135deg);
+					-o-transform: rotate(135deg);
+				}
+			}
+			animation: e2-close-m .2s ease-out .05s forwards;
+		}
+		&.e3{
+
+			transform: rotate(90deg);
+			-ms-transform: rotate(90deg);
+			-webkit-transform: rotate(90deg);
+			-moz-transform: rotate(90deg);
+			-o-transform: rotate(90deg);
+
+			@keyframes e3-close-m{
+				from{
+					right: -10px;
+					transform: rotate(90deg);
+					-ms-transform: rotate(90deg);
+					-webkit-transform: rotate(90deg);
+					-moz-transform: rotate(90deg);
+					-o-transform: rotate(90deg);
+				}
+				to{
+					right: 10px;
+					transform: rotate(135deg);
+					-ms-transform: rotate(135deg);
+					-webkit-transform: rotate(135deg);
+					-moz-transform: rotate(135deg);
+					-o-transform: rotate(135deg);
+				}
+			}
+			animation: e3-close-m .2s ease-out .1s forwards;
+		}
+		&.e4{
+
+			transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+
+			@keyframes e4-close-m{
+				from{
+					bottom: 10px;
+					transform: rotate(0deg);
+					-ms-transform: rotate(0deg);
+					-webkit-transform: rotate(0deg);
+					-moz-transform: rotate(0deg);
+					-o-transform: rotate(0deg);
+				}
+				to{
+					bottom: 29px;
+					transform: rotate(45deg);
+					-ms-transform: rotate(45deg);
+					-webkit-transform: rotate(45deg);
+					-moz-transform: rotate(45deg);
+					-o-transform: rotate(45deg);
+				}
+			}
+			animation: e4-close-m .2s ease-out .15s forwards;
 		}
 	}
 
 	&:hover{
 		>.element{
-			background-color: red;
+			// background-color: red;
 		}
 	}
 }
 
-#navigator:checked ~ section.page > section.welcome{
-	width: calc(100vw - 400px);
+#navigator:checked ~ section.page{
+			
+	//{ ** ATTRIBUTES
+		width: calc(100vw - 400px);
+	//} ** END ATTRIBUTES
+	
+	&.isMobile{
+		width: 0px;
+	}
 }
 
 #navigator:not(:checked) ~ label > div.navigator{
-	>.element{
+	>.element:not(.isMobile){
 		&.e1{
 			@keyframes e1-start{
 				from{
@@ -179,6 +313,7 @@ label{
 			}
 			animation: e1-start .1s ease-out .2s forwards;
 
+			top: 0px;
 			transform: rotate(0deg);
 			-ms-transform: rotate(0deg);
 			-webkit-transform: rotate(0deg);
@@ -237,8 +372,124 @@ label{
 			-o-transform: rotate(0deg);
 		}
 	}
+
+	>.element.isMobile{
+		&.e1{
+			@keyframes e1-start-m{
+				from{
+					top: 29px;
+					transform: rotate(45deg);
+					-ms-transform: rotate(45deg);
+					-webkit-transform: rotate(45deg);
+					-moz-transform: rotate(45deg);
+					-o-transform: rotate(45deg);
+				}
+				to{
+					top: 10px;
+					transform: rotate(0deg);
+					-ms-transform: rotate(0deg);
+					-webkit-transform: rotate(0deg);
+					-moz-transform: rotate(0deg);
+					-o-transform: rotate(0deg);
+				}
+			}
+			animation: e1-start-m .2s ease-out .2s forwards;
+
+			top: 29px;
+			transform: rotate(45deg);
+			-ms-transform: rotate(45deg);
+			-webkit-transform: rotate(45deg);
+			-moz-transform: rotate(45deg);
+			-o-transform: rotate(45deg);
+		}
+		&.e2{
+			@keyframes e2-start-m{
+				from{
+					left: 10px;
+					transform: rotate(135deg);
+					-ms-transform: rotate(135deg);
+					-webkit-transform: rotate(135deg);
+					-moz-transform: rotate(135deg);
+					-o-transform: rotate(135deg);
+				}
+				to{
+					left: -10px;
+					transform: rotate(90deg);
+					-ms-transform: rotate(90deg);
+					-webkit-transform: rotate(90deg);
+					-moz-transform: rotate(90deg);
+					-o-transform: rotate(90deg);
+				}
+			}
+			animation: e2-start-m .2s ease-out .65s forwards;
+
+			left: 10px;
+			transform: rotate(135deg);
+			-ms-transform: rotate(135deg);
+			-webkit-transform: rotate(135deg);
+			-moz-transform: rotate(135deg);
+			-o-transform: rotate(135deg);
+		}
+		&.e3{
+			@keyframes e3-start-m{
+				from{
+					right: 10px;
+					transform: rotate(135deg);
+					-ms-transform: rotate(135deg);
+					-webkit-transform: rotate(135deg);
+					-moz-transform: rotate(135deg);
+					-o-transform: rotate(135deg);
+				}
+				to{
+					right: -10px;
+					transform: rotate(90deg);
+					-ms-transform: rotate(90deg);
+					-webkit-transform: rotate(90deg);
+					-moz-transform: rotate(90deg);
+					-o-transform: rotate(90deg);
+				}
+			}
+			animation: e3-start-m .2s ease-out .35s forwards;
+
+			right: 10px;
+			transform: rotate(135deg);
+			-ms-transform: rotate(135deg);
+			-webkit-transform: rotate(135deg);
+			-moz-transform: rotate(135deg);
+			-o-transform: rotate(135deg);
+		}
+		&.e4{
+			@keyframes e4-start-m{
+				from{
+					bottom: 29px;
+					transform: rotate(45deg);
+					-ms-transform: rotate(45deg);
+					-webkit-transform: rotate(45deg);
+					-moz-transform: rotate(45deg);
+					-o-transform: rotate(45deg);
+				}
+				to{
+					bottom: 10px;
+					transform: rotate(0deg);
+					-ms-transform: rotate(0deg);
+					-webkit-transform: rotate(0deg);
+					-moz-transform: rotate(0deg);
+					-o-transform: rotate(0deg);
+				}
+			}
+			animation: e4-start-m .2s ease-out .5s forwards;
+
+			bottom: 29px;
+			transform: rotate(45deg);
+			-ms-transform: rotate(45deg);
+			-webkit-transform: rotate(45deg);
+			-moz-transform: rotate(45deg);
+			-o-transform: rotate(45deg);
+		}
+	}
+
 	&:hover{
-		>.element{
+		>.element:not(.isMobile){
 			&.e1{
 				@keyframes e1-hover{
 					from{
@@ -301,7 +552,7 @@ label{
 
 	//} ** END ATTRIBUTES
 	
-	>.element{
+	>.element:not(.isMobile){
 		position: absolute;
 		width: 40px;
 		height: 2px;
@@ -330,6 +581,42 @@ label{
 			
 		}
 	}
+	>.element.isMobile{
+		position: absolute;
+		width: 40px;
+		height: 2px;
+		background-color: white;
+
+		&.e1{
+			
+			top: 10px;
+			left: 10px;
+		}
+		&.e2{
+
+			left: -10px;
+			top: 29px;
+		}
+		&.e3{
+
+			right: -10px;
+			top: 29px;
+
+		}
+		&.e4{
+
+			bottom: 10px;
+			left: 10px;
+			
+		}
+	}
+	&.isMobile{
+
+		//{ ** INCLUDES
+			@include noDecoration();
+		//} ** END INCLUDES
+		
+	}
 }
 
 
@@ -344,22 +631,26 @@ form{
 
 	//{ ** ATTRIBUTES
 		float: right;
-		clear: none;   
+		clear: none;
+		height: 100vh;
+		width: 100vw;   
 	//} ** END ATTRIBUTES
+
+	//{ ** INCLUDES
+		@include quickTransition(width);
+	//} ** END INCLUDES	
 
 		>.welcome{
 
 			//{ ** ATTRIBUTES
-				height: 100vh;
-				width: 100vw;
+				height: 100%;
+				width: 100%;
 				background-color: $color-black;
 				overflow-x: hidden;
 			//} ** END ATTRIBUTES
 
 
-			//{ ** INCLUDES
-				@include quickTransition(width);
-			//} ** END INCLUDES
+			
 			
 			
 
@@ -401,8 +692,8 @@ form{
 					//{ ** ATTRIBUTES
 						width: 20vw;
 						height: 20vw;
-						max-width: 229px;
-						max-height: 229px;
+						max-width: 218px;
+						max-height: 218px;
 						min-width: 115px;
 						min-height: 115px;
 						background-image: url('../../img/spring2017/logo-noText-trans.png');
@@ -432,6 +723,28 @@ form{
 						padding-top: 30px;
 						font-size: 2em;
 						color: white;
+						font-weight: 300;
+					//} ** END ATTRIBUTES
+					
+				}
+
+				>.date{
+					opacity: 0;
+
+					@keyframes title{
+						from{
+							opacity: 0;
+						}
+						to{
+							opacity: 1;
+						}
+					}
+
+					animation: title .5s ease-out 0.9s forwards;
+
+					//{ ** ATTRIBUTES
+						color: white;
+						font-size: 1em;
 						font-weight: 300;
 					//} ** END ATTRIBUTES
 					
