--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -23,7 +23,8 @@ label {
 .hackbot {
   width: 400px;
   background-color: black;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   position: fixed;
   z-index: 0; }
   .hackbot.isMobile {
@@ -442,17 +443,20 @@ form {
   form > .page {
     float: right;
     clear: none;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     width: 100vw;
     -moz-transition: width 0.2s ease;
     -o-transition: width 0.2s ease;
     -webkit-transition: width 0.2s ease;
+    -ms-transition: width 0.2s ease;
     transition: width 0.2s ease; }
     form > .page > .welcome {
-      height: 100%;
+      height: 100vh;
       width: 100%;
       background-color: #161616;
-      overflow-x: hidden; }
+      overflow-x: hidden;
+      float: left; }
       form > .page > .welcome > .container {
         float: left;
         height: auto;
