testing link interface 2

--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -28,7 +28,7 @@ label {
   position: fixed;
   z-index: 0; }
   .hackbot > .nav-links.isMobile {
-    bottom: 0;
+    bottom: 20px;
     right: 0;
     position: absolute;
     max-width: calc(107px * 2); }
