--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -41,7 +41,7 @@ label{
 	>.nav-links.isMobile{
 
 		//{ ** ATTRIBUTES
-			bottom: 0;
+			bottom: 20px;
 			right: 0;
 			position: absolute;
 			max-width: calc(107px * 2);
